compiling_error.txt
In file included from C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\main.cpp:1:0:
C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\lugar.h:24:32: error: expected ';' at end of member declaration
   double toRadian(double grados)
                                ^
C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\lugar.hxx: In member function 'double lugar::toRadian(double)':
C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\lugar.h:7:24: error: expected ')' before ';' token
 #define PI 3.1415926535;
                        ^
C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\lugar.hxx:24:24: note: in expansion of macro 'PI'
     return ((grados*(2*PI))/360);
                        ^
C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\lugar.h:7:24: error: expected ')' before ';' token
 #define PI 3.1415926535;
                        ^
C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\lugar.hxx:24:24: note: in expansion of macro 'PI'
     return ((grados*(2*PI))/360);
                        ^
C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\lugar.h:7:24: error: expected ')' before ';' token
 #define PI 3.1415926535;
                        ^
C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\lugar.hxx:24:24: note: in expansion of macro 'PI'
     return ((grados*(2*PI))/360);
                        ^
In file included from C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\lugar.h:35:0,
                 from C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\main.cpp:1:
C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\lugar.hxx:24:26: error: expected primary-expression before ')' token
     return ((grados*(2*PI))/360);
                          ^
